@@ -1,3 +1,7 @@
+2003-08-04  Peter Bienstman  <Peter.Bienstman@ugent.be>
+
+	* geometry.py: Fix thinko in to_expression.
+
 2003-08-01  Peter Bienstman  <Peter.Bienstman@ugent.be>
 
 	* scatterer.h: Improve all_layers_uniform.
